--- a/com.rockwellcollins.spear/plugin.xml
+++ b/com.rockwellcollins.spear/plugin.xml
@@ -44,6 +44,10 @@
               name="appName"
               value="SpeAR">
         </property>
+        <property
+              name="preferenceCustomization"
+              value="plugin_customization.ini">
+        </property>
      </product>
   </extension>
 
