adding files for realizability check

--- a/com.rockwellcollins.spear.translate/plugin.xml
+++ b/com.rockwellcollins.spear.translate/plugin.xml
@@ -15,6 +15,24 @@
             </separator>
          </menu>
          <action
+               label="&amp;Generate PDF"
+               icon="icons/document.png"
+               class="com.rockwellcollins.spear.translate.actions.GenerateDocumentation"
+               tooltip="Generate PDF"
+               menubarPath="translateMenu/translateGroup"
+               toolbarPath="translateGroup"
+               id="com.rockwellcollins.spear.translate.GeneratePDF">
+         </action>
+         <action
+               label="&amp;Check Realizability"
+               icon="icons/realizability.png"
+               class="com.rockwellcollins.spear.translate.actions.CheckRealizability"
+               tooltip="Check Realizability"
+               menubarPath="translateMenu/translateGroup"
+               toolbarPath="translateGroup"
+               id="com.rockwellcollins.spear.translate.CheckLogicalEntailment">
+         </action>
+         <action
                label="&amp;Check Logical Consistency"
                icon="icons/logical_consistency.png"
                class="com.rockwellcollins.spear.translate.actions.CheckLogicalConsistency"
@@ -31,15 +49,6 @@
                menubarPath="translateMenu/translateGroup"
                toolbarPath="translateGroup"
                id="com.rockwellcollins.spear.translate.CheckLogicalEntailment">
-         </action>
-         <action
-               label="&amp;Generate PDF"
-               icon="icons/document.png"
-               class="com.rockwellcollins.spear.translate.actions.GenerateDocumentation"
-               tooltip="Generate PDF"
-               menubarPath="translateMenu/translateGroup"
-               toolbarPath="translateGroup"
-               id="com.rockwellcollins.spear.translate.GeneratePDF">
          </action>
       </actionSet>
    </extension>
