--- a/com.rockwellcollins.spear.translate/plugin.xml
+++ b/com.rockwellcollins.spear.translate/plugin.xml
@@ -26,7 +26,7 @@
          <action
                label="&amp;Generate PDF"
                icon="icons/document.png"
-               class="com.rockwellcollins.spear.translate.actions.GenerateDocumentation"
+               class="com.rockwellcollins.spear.translate.actions.GeneratePDF"
                tooltip="Generate PDF"
                menubarPath="translateMenu/translateGroup"
                toolbarPath="translateGroup"
