--- a/com.rockwellcollins.spear.translate/plugin.xml
+++ b/com.rockwellcollins.spear.translate/plugin.xml
@@ -116,7 +116,13 @@
            description="Analyze Type"
            id="com.rockwellcollins.spear.translate.commands.analyzeType"
            name="Check Type Validity">
+     </command>
+     <command categoryId="com.rockwellcollins.spear.translate.commands"
+           description="Terminate Analysis"
+           id="com.rockwellcollins.spear.translate.commands.terminateAnalysis"
+           name="Cancel Analysis">
      </command>   
+        
    </extension>
    <extension
          point="org.eclipse.ui.menus">
@@ -135,7 +141,38 @@
                 id="com.rockwellcollins.spear.translate.commands.analyzeType"
                 style="push">
           </command>
+      </menuContribution> 
+      <menuContribution
+            allPopups="false"
+            locationURI="toolbar:com.rockwellcollins.spear.translate.views.SpearEntailmentResultsView">
+         <command
+               commandId="com.rockwellcollins.spear.translate.commands.terminateAnalysis"
+               icon="icons/terminate.png"
+               label="Terminate"
+               style="push">
+         </command>
       </menuContribution>
+      <menuContribution
+            allPopups="false"
+            locationURI="toolbar:com.rockwellcollins.spear.translate.views.SpearConsistencyResultsView">
+         <command
+               commandId="com.rockwellcollins.spear.translate.commands.terminateAnalysis"
+               icon="icons/terminate.png"
+               label="Terminate"
+               style="push">
+         </command>
+      </menuContribution>
+      <menuContribution
+            allPopups="false"
+            locationURI="toolbar:com.rockwellcollins.spear.translate.views.SpearRealizabilityResultsView">
+         <command
+               commandId="com.rockwellcollins.spear.translate.commands.terminateAnalysis"
+               icon="icons/terminate.png"
+               label="Terminate"
+               style="push">
+         </command>
+      </menuContribution>      
+            
    </extension>
    <extension
          point="org.eclipse.ui.handlers">
