--- a/com.rockwellcollins.spear/build.properties
+++ b/com.rockwellcollins.spear/build.properties
@@ -5,8 +5,7 @@ bin.includes = model/,\
                plugin_customization.ini,\
                branding/,\
                dependencies/,\
-               icons/,\
-               dependencies/jcommander-1.64.jar
+               icons/
 source.. = src/,\
            src-gen/,\
            xtend-gen/
