--- a/com.rockwellcollins.spear.ui.commandline/build.properties
+++ b/com.rockwellcollins.spear.ui.commandline/build.properties
@@ -1,6 +1,6 @@
-source.. = src/,\
-          src-gen/,\
-          xtend-gen/
+source.. = src/
 bin.includes = META-INF/,\
                .,\
                dependencies/jcommander-1.64.jar
+src.includes = src/,\
+               dependencies/
