--- a/com.rockwellcollins.spear/build.properties
+++ b/com.rockwellcollins.spear/build.properties
@@ -5,7 +5,8 @@ bin.includes = model/,\
                plugin_customization.ini,\
                branding/,\
                dependencies/,\
-               icons/
+               icons/,\
+               dependencies/jkind.jar
 source.. = src/,\
            src-gen/,\
            xtend-gen/
