updated the location of jar files to allow apache commons to be used everywhere without issue.

--- a/com.rockwellcollins.spear/build.properties
+++ b/com.rockwellcollins.spear/build.properties
@@ -5,7 +5,10 @@ bin.includes = model/,\
                plugin_customization.ini,\
                branding/,\
                dependencies/,\
-               icons/
+               icons/,\
+               dependencies/jkind/jkind-api.jar,\
+               dependencies/commons/commons-collections4-4.1.jar,\
+               dependencies/commons/commons-lang3-3.4.jar
 source.. = src/,\
            src-gen/,\
            xtend-gen/
