--- a/com.rockwellcollins.spear.ui/plugin.xml
+++ b/com.rockwellcollins.spear.ui/plugin.xml
@@ -580,10 +580,10 @@
               icon="icons/counterexample.png"
               id="com.rockwellcollins.spear.ui.views.SpearCounterexampleView"
               name="Counterexample"/>
-                  <view
+        <view
               category="com.rockwellcollins.spear.ui"
               class="com.rockwellcollins.spear.ui.views.LightweightConsoleView"
-              icon="icons/counterexample.png"
+              icon="icons/batchanalysis.png"
               id="com.rockwellcollins.spear.ui.views.LightweightConsoleView"
               name="Batch Analysis"/>
         <view
